--- a/source/server/annotation/templates/project_import.html
+++ b/source/server/annotation/templates/project_import.html
@@ -1,6 +1,7 @@
 {% extends "project_page.html" %}
 
 {% load static %}
+{% load i18n %}
 
 {% block title %}<title> Shanno - {{ project.name }} [Import] </title>{% endblock %}
 
