--- a/source/server/templates/index.html
+++ b/source/server/templates/index.html
@@ -5,8 +5,8 @@
 
 {% block content %}
 
-  {% trans "Shanno - проект подготовки текста для работы с нейронными сетями" as the_title_1 %}
-  {% trans "Позволяет сделать разметку на сущности (NER), импортировать и экспортировать результаты работы в формате collnu plus" as the_title_2 %}
+  {% trans "Shanno - this is the project for preparation a text, the one will be use to work with neuron networks" as the_title_1 %}
+  {% trans "Allows you to make markup on entities (NER), import and export the results of the work in collnu plus format" as the_title_2 %}
 
   {% if user.is_authenticated %}
     <section class="hero is-main-color">
