--- a/source/server/annotation/templates/project_tl_labels.html
+++ b/source/server/annotation/templates/project_tl_labels.html
@@ -20,7 +20,7 @@
 
   <div class="columns is-multiline">
     <div class="column is-full">
-      <button class="button is-primary" @click="createLabel()">Новая метка</button>
+      <button class="button is-primary" @click="createLabel()">{% trans "New label" %}</button>
     </div>
     <div class="column is-full" v-if="new_label">
       <div class="box">
@@ -32,7 +32,7 @@
             </div>
           </div>
           <div class="column">
-            <b-field label="Название метки">
+            <b-field label='{% trans "Name of label" %}'>
               <b-field>
                 <b-input v-model="new_label.name" expanded></b-input>
                 <p class="control">
@@ -40,14 +40,14 @@
                     <span class="icon">
                       <i class="fas fa-palette"></i>
                     </span>
-                    <span>Цвет</span>
+                    <span>{% trans "Color" %}</span>
                   </button>
                 </p>
               </b-field>
             </b-field>
           </div>
           <div class="column">
-            <b-field label="Горячие клавиши">
+            <b-field label='{% trans "Hotkey" %}'>
               <b-field>
                 <b-select v-model="new_label.prefix_key" expanded>
                   <option value=""></option>
@@ -73,12 +73,12 @@
                     <span class="icon is-small">
                       <i class="fas fa-check"></i>
                     </span>
-                    <span>Добавить метку</span>
+                    <span>{% trans "Add label" %}</span>
                   </button>
                 </div>
                 <div class="control">
                   <button class="button is-danger is-outlined" @click="cancelCreate()">
-                    <span>Отменить</span>
+                    <span>{% trans "Cancel" %}</span>
                     <span class="icon is-small">
                       <i class="fas fa-times"></i>
                     </span>
@@ -94,7 +94,7 @@
   <div class="card">
     <header class="card-header">
       <p class="card-header-title">
-        Метки в проекте - ${labels.length}
+        {% trans "Labels in the project" %} - ${labels.length}
       </p>
     </header>
     <div class="card-content">
@@ -116,7 +116,7 @@
                     <span class="icon is-small">
                       <i class="fas fa-pen"></i>
                     </span>
-                    <span>Редактировать</span>
+                    <span>{% trans "Edit" %}</span>
                   </button>
                 </p>
                 <p class="control">
@@ -124,7 +124,7 @@
                     <span class="icon is-small">
                       <i class="fas fa-trash-alt"></i>
                     </span>
-                    <span>Удалить</span>
+                    <span>{% trans "Delete" %}</span>
                   </button>
                 </p>
               </b-field>
@@ -133,7 +133,7 @@
         </nav>
         <div class="columns mb-1r" v-show="label === active_edit">
           <div class="column">
-            <b-field label="Название метки">
+            <b-field label='{% trans "Name of label" %}'>
               <b-field>
                 <b-input v-model="label.name" expanded></b-input>
                 <p class="control">
@@ -141,14 +141,14 @@
                     <span class="icon">
                       <i class="fas fa-palette"></i>
                     </span>
-                    <span>Цвет</span>
+                    <span>{% trans "Color" %}</span>
                   </button>
                 </p>
               </b-field>
             </b-field>
           </div>
           <div class="column">
-            <b-field label="Горячие клавиши">
+            <b-field label='{% trans "Hotkey" %}'>
               <b-field>
                 <b-select v-model="label.prefix_key" expanded>
                   <option value=""></option>
@@ -174,12 +174,12 @@
                     <span class="icon is-small">
                       <i class="fas fa-save"></i>
                     </span>
-                    <span>Сохранить изменения</span>
+                    <span>{% trans "Save changes" %}</span>
                   </button>
                 </div>
                 <div class="control">
                   <button class="button is-danger is-outlined" @click="repealEdit(label)">
-                    <span>Отменить</span>
+                    <span>{% trans "Cancel" %}</span>
                     <span class="icon is-small">
                       <i class="fas fa-times"></i>
                     </span>
@@ -190,14 +190,14 @@
           </div>
         </div>
         <div class="notification is-info mb-1r" v-show="is_open_delete == index">
-          <p>Вы действительно хотите удалить метку?</p>
+          <p>{% trans "Are you sure you want to delete the label" %}</p>
           <br>
           <div class="field is-grouped">
             <p class="control">
-              <button class="button is-success is-inverted is-outlined is-small" @click="deleteLabel(label)">Да</button>
+              <button class="button is-success is-inverted is-outlined is-small" @click="deleteLabel(label)">{% trans "Yes" %}</button>
             </p>
             <p class="control">
-              <button class="button is-danger is-inverted is-outlined is-small" @click="closeDelete()">Нет</button>
+              <button class="button is-danger is-inverted is-outlined is-small" @click="closeDelete()">{% trans "No" %}</button>
             </p>
           </div>
         </div>
