--- a/source/server/annotation/templates/project_import.html
+++ b/source/server/annotation/templates/project_import.html
@@ -17,17 +17,17 @@
   ${ st_value }
   </b-notification>
   <div class="column">
-    <h5 class="title is-5">Выберите тип файла для загрузки</h5>
+    <h5 class="title is-5">{% trans "Select the type of file for upload" %}</h5>
   </div>
   <div class="column">
     <b-tabs v-model="selected">
       <b-tab-item label="CoNLL-U Plus">
         <p>
-          Является расширением формата CoNLL-U. Может иметь любое количество столбцов.
-          <a href="https://universaldependencies.org/ext-format.html">Формат.</a>
-          Должен быть в кодировке UTF-8.
+          {% trans "He is an extenshion of format CoNLL-U. The one may to have any count the columns." %}
+          <a href="https://universaldependencies.org/ext-format.html">{% trans "Format." %}</a>
+          {% trans "He should be in the coding UTF8." %}
         </p>
-        <p>Пример:</p>
+        <p>{% trans "Example:" %}</p>
         <pre class="has-background-dark has-text-white">  
 # global.columns = FORM NE
 
@@ -37,7 +37,7 @@ only  _
 example _ 
         </pre>
       </b-tab-item>
-      <b-tab-item label="Другой формат">
+      <b-tab-item label='{% trans "Other format" %}'>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
           Harum nihil deleniti labore eos ratione, omnis nam fuga dignissimos
@@ -55,7 +55,7 @@ example _
           @click="uploadFiles({{project.id}})"
           :disabled="files === null"
           :loading="is_loading">
-          Загрузить
+          {% trans "Upload" %}
         </b-button>
       </p>
       <b-upload v-model="files">
