Второй вариант кнопочки

--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -74,7 +74,7 @@
       </b-navbar-item> -->
       <b-navbar-item tag="div">
         <b-dropdown v-model="language" aria-role="list">
-          <button class="button is-success" type="button" slot="trigger">
+          <button class="button is-success is-inverted is-outlined" type="button" slot="trigger">
               <template v-if="language === 'ru'">
                   <span>ru</span>
               </template>
